Bug 52420 - [bug] weston dnd client resize clips surfaces incorrectly
Summary: [bug] weston dnd client resize clips surfaces incorrectly
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-23 23:14 UTC by Brian Lovin
Modified: 2012-11-27 23:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Observe flower patters being clipped in a strange way after window resize. (34.64 KB, image/png)
2012-07-23 23:14 UTC, Brian Lovin
Details

Description Brian Lovin 2012-07-23 23:14:27 UTC
Created attachment 64572 [details]
Observe flower patters being clipped in a strange way after window resize.

System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
glproto master ec1eec4355ee4a6c5134f2178192f10b6d28a87a
mesa master 82fc813ca870c4002502e098519bead7bec1a7e8
wayland master eadb68ec32df8ee54ccba175d19adcdedfaa5015
pixman master 56321eff65832791252c7c324930d14c44d4d5f7
weston master 2327d1f490a5362e6b6199ca68b14d11e2f13408
drm master ebd7904877d08525beb5039e4ea2f5b6c0a7c23f
cairo master 21e3f2e9034b64131075d82a4e34868dc72f2249
libX11 master 8042f88ace33573f9d0dfaa21ed54ac7cef266d5
macros master 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
libxkbcommon master fe4f990902c7cd8f395b9f3be14dc6e8cad7cae9
dri2proto master 4eeacce4c4a300b938b7e3fb78a8e443c491780b
kbproto master 391a1f6de6315fc0196d407d800597488315ccc

Detailed Description:
-----------------------------
Run dnd, then resize larger than the window currently is (say to 700x700) and move some of the flower patterns to the border of the window.
Resize window smaller and see that the flower patterns will be clipped quite a bit after they should be. (See attached photo for example)


Steps to Reproduce:
----------------------------
1. start weston under X11 or DRM mode
2. ./dnd
3. Resize dnd window larger (say to 700x700)
4. Drag and drop flower patters to the edge of the window
5. Resize the window smaller and you should see the bug
Comment 1 Kristian Høgsberg 2012-07-24 01:32:32 UTC
Yeah, I guess we should fix that old bug:


commit 0fd49aa8862a3c634ee6a14da139b4e5d620c605
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Jul 23 21:32:46 2012 -0400

    dnd: Clip flowers to window content area
Comment 2 Brian Lovin 2012-07-31 17:19:31 UTC
Just tested this one as well, the clipping is now done correctly!

Resolving as Fixed.
Comment 3 Brian Lovin 2012-11-27 23:10:54 UTC
Changing to verified


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.