dnd: Clip flowers to window content area

https://bugs.freedesktop.org/show_bug.cgi?id=52420